<resources>
    <string name="app_name">WI-FITransfer</string>
    <string name="wlan_enabled">WLAN服务已开启</string>
    <string name="wlan_disabled">WLAN服务未开启</string>
    <string name="pls_check_network_state">请检查您的网络设置</string>
    <string name="fail_to_start_http_service">启动HTTP服务失败</string>
    <string name="retrofit_wlan_address">正在获取地址...</string>
    <string name="pls_input_the_following_address_in_pc_browser">请在电脑浏览器地址栏完整输入</string>
    <string name="cancel">取消</string>
    <string name="set_network">设置网络</string>
    <string name="str_file_share_unopened">（文件共享服务暂未开启）</string>
    <string name="str_file_share_started">（文件共享服务暂已开启）</string>
    <string name="str_file_share_tips">请点击页面右上角开关按钮开启服务）</string>
    <string name="http_address">http://%1$s:%2$d</string>
    <string name="str_no_data">暂无任何文件</string>
    <string name="str_tips">1.点击右上角的按钮开关服务\n2.点击右下角的的Wifi按钮查看访问地址</string>
</resources>
