<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/popup_menu_view_background"
              android:orientation="vertical">

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
    <ImageView
            android:id="@+id/shared_wifi_state"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="centerInside"
            android:src="@drawable/shared_wifi_enable"/>
    <TextView
            android:id="@+id/popup_menu_title"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/wlan_enabled"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"/>

</LinearLayout>
    <TextView
            android:id="@+id/popup_menu_subtitle"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/pls_check_network_state"
            android:textSize="12sp"
            android:visibility="gone"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">



            <ImageView
                    android:id="@+id/shared_file_state"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_file_share_n"/>
            <TextView
                    android:id="@+id/shared_file_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_file_share_unopened"
                    android:textSize="12sp"
                    android:visibility="visible"/>
    </LinearLayout>

    <TextView
            android:id="@+id/shared_wifi_state_hint"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/pls_input_the_following_address_in_pc_browser"
            android:textSize="15sp"/>

    <TextView
            android:id="@+id/shared_wifi_address"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="http://10.100.9.195:8081"
            android:textColor="@color/colorWifiConnected"
            android:textSize="15sp"/>

    <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

        <Button
                android:id="@+id/shared_wifi_cancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"/>

        <View
                android:id="@+id/shared_wifi_button_split_line"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>

        <Button
                android:id="@+id/shared_wifi_settings"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/set_network"
                android:textColor="@color/colorAccent"/>
    </LinearLayout>
</LinearLayout>